Fixing vertical alignment of landscape-oriented

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,8 +132,10 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 16.66%;
   right: 0;
+  left: 17.666666%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 #sidebar {
