--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -145,16 +145,20 @@
  * APPROACH 1 -- 100% on longest side, no upscale.
  */
 
-#gallery-page #main-content {
-  .container-fluid,
+#gallery-image-page #main-content {
+  > .container-fluid {
+    height: 90%;
+    display: flex;
+    align-items: center;
+  }
+
   #main-image-container {
-    height: 100%;
+    max-height: 100%;
   }
 }
 
 #main-image-container {
   display: flex;
-  //align-items: center;
   justify-content: center;
   width: 100%;
 }
